# origin_conversation

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
LICENSES/: CC-BY-SA-4.0.txt  README.md
docs/: AGENTS.md  CONFIGURATION.md  GETTING_STARTED.md  MCP_CLIENTS.md  OVERVIEW.md  README.md  TOOL_REFERENCE.md
origin_conversation_mcp/: __init__.py  __main__.py  search.py  server.py
tests/: conftest.py  test_main.py  test_search.py  test_server.py
