[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-conversation"
version = "0.1.1"
description = "Conversation and export tooling for SanctumOS; MCP server for conversation search over canonical ChatGPT history"
readme = "README.md"
requires-python = ">=3.10"
# Tested with mcp 1.x, starlette 0.27.x, uvicorn 0.15.x. Upper bounds reduce surprise breakage (e.g. request._send).
dependencies = [
    "mcp>=1.10.1",
    "starlette>=0.27.0,<0.40.0",
    "uvicorn>=0.15.0",
]

[tool.setuptools.packages.find]
include = ["origin_conversation_mcp*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["origin_conversation_mcp"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[project.scripts]
origin-conversation-mcp = "origin_conversation_mcp.__main__:main"
